# year-of-bot

./: CONTRIBUTING.md  README.md  bot.py  data.py  flake.nix  nixos-module.nix  os.txt  platform.txt  predictions.txt  pyproject.toml  sort-data.sh  subjects.txt  year-of-bot.py
.github/workflows/: ci.yml
predictions/: multiple.txt  single.txt
tests/: __init__.py
year_of_bot/: __init__.py  __main__.py
year_of_bot/data/: __init__.py  subjects.txt
year_of_bot/data/predictions/: multiple.txt  single.txt
