[tool.poetry]
name = "year-of-bot"
version = "0.1.0"
description = ""
authors = ["Astrid Yu <astrid@astrid.tech>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{ include = "year_of_bot" }]

[tool.poetry.dependencies]
python = "^3.10"
pleroma-py = "^0.0.2"
asyncclick = "^8.1.3.4"

[tool.poetry.scripts]
year-of-bot = "year_of_bot.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
